Fix static file serving and CSS paths

--- a/parafrase.html
+++ b/parafrase.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parafrase Teks - ParafraseKu</title>
-    <link rel="stylesheet" href="parafrase.css"> <!-- CSS khusus parafrase -->
+   <link rel="stylesheet" href="/parafrase.css"><!-- CSS khusus parafrase -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
