Fix all asset paths for Vercel deployment

--- a/dashboard.html
+++ b/dashboard.html
@@ -38,7 +38,7 @@
                 </div>
                 
                 <div class="feature-cards">
-                    <a href="parafrase.html" class="feature-card">
+                    <a href="/parafrase" class="feature-card">
                         <div class="card-icon">
                             <i class="fas fa-edit"></i>
                         </div>
@@ -161,7 +161,7 @@
             <div class="footer-content">
                 <p>Dibuat dengan ❤️ untuk membuat menulis lebih menyenangkan!</p>
                 <div class="footer-links">
-                    <a href="parafrase.html">Parafrase</a>
+                    <a href="/parafrase">Parafrase</a>
                     <a href="#" onclick="showFeature('game')">Game</a>
                     <a href="#" onclick="showFeature('tips')">Tips</a>
                 </div>
@@ -177,6 +177,6 @@
         <div class="floating-emoji">🤖</div>
     </div>
 
-    <script src="dashboard.js"></script>
+    <script src="/dashboard.js"></script>
 </body>
 </html>
