--- a/parafrase.html
+++ b/parafrase.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parafrase Teks - ParafraseKu</title>
-   <link rel="stylesheet" href="/parafrase.css"><!-- CSS khusus parafrase -->
+    <link rel="stylesheet" href="/parafrase.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
@@ -13,7 +13,7 @@
         <header class="fun-header">
             <div class="header-content">
                 <div class="logo-section">
-                    <a href="dashboard.html" class="back-button">
+                    <a href="/dashboard" class="back-button">
                         <i class="fas fa-arrow-left"></i>
                     </a>
                     <div class="logo-bubble">
@@ -161,8 +161,8 @@
             <div class="footer-content">
                 <p>Dibuat dengan ❤️ untuk membuat menulis lebih menyenangkan!</p>
                 <div class="footer-links">
-                    <a href="dashboard.html">Beranda</a>
-                    <a href="parafrase.html">Parafrase</a>
+                    <a href="/dashboard">Beranda</a>
+                    <a href="/parafrase">Parafrase</a>
                     <a href="#">Bantuan</a>
                 </div>
             </div>
@@ -177,6 +177,6 @@
         <div class="floating-emoji">🤖</div>
     </div>
 
-    <script src="parafrase.js"></script>
+    <script src="/parafrase.js"></script>
 </body>
 </html>
