--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ParafraseKu - Alat Parafrase Online</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="container">
@@ -58,8 +58,6 @@
                 </div>
             </form>
 
-            <!-- Status koneksi akan ditambahkan di sini oleh JavaScript -->
-
             <div class="result-section">
                 <label for="resultText"><strong>Hasil Parafrase:</strong></label>
                 <textarea 
@@ -81,6 +79,6 @@
         </footer>
     </div>
 
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
