Upload pertama proyek ParafraseKu

--- a/dashboard.html
+++ b/dashboard.html
@@ -607,7 +607,7 @@ body {
                 </div>
                 
                 <div class="feature-cards">
-                    <a href="/parafrase" class="feature-card">
+                    <a href="parafrase" class="feature-card">
                         <div class="card-icon">
                             <i class="fas fa-edit"></i>
                         </div>
