--- a/dashboard.html
+++ b/dashboard.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ParafraseKu - Parafrase AI yang Menyenangkan!</title>
-    <link rel="stylesheet" href="/dashboard.css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Dashboard</title>
+  <!-- Gunakan path ABSOLUT agar pasti -->
+  <link rel="stylesheet" href="/css/dashboard.css">
+  <link rel="stylesheet" href="/css/parafrase.css">
 </head>
 <body>
     <div class="fun-container">
@@ -176,7 +177,6 @@
         <div class="floating-emoji">📝</div>
         <div class="floating-emoji">🤖</div>
     </div>
-
-    <script src="/dashboard.js"></script>
+    <script src="/js/dashboard.js"></script>
 </body>
 </html>
