--- a/parafrase.html
+++ b/parafrase.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parafrase Teks - ParafraseKu</title>
-    <link rel="stylesheet" href="/parafrase.css">
+    <!-- Ganti /public/css/... => /css/... -->
+    <link rel="stylesheet" href="/css/parafrase.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
@@ -177,6 +178,7 @@
         <div class="floating-emoji">🤖</div>
     </div>
 
-    <script src="/parafrase.js"></script>
+    <!-- Ganti /parafrase.js => /js/parafrase.js -->
+    <script src="/js/parafrase.js"></script>
 </body>
 </html>
